--- a/index.html
+++ b/index.html
@@ -99,7 +99,27 @@ tr.year1 td:first-child { background: #f9fdfb; font-weight: bold; }
       </tr>
     </thead>
     <tbody>
-      <!-- 19名分（省略可：前回のまま） -->
+      <!-- 2年生 -->
+      <tr class="year2"><td><input type="text" value="2年 石井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 黒田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 黒畑" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 齋藤" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 高倉" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 西井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 二宮" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 堀井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 山本" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <!-- 1年生 -->
+      <tr class="year1"><td><input type="text" value="1年 荒井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 浦上" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 瓜生" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 管" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 新川" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 須原" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 芹田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 古田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 鈴木" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 豊本" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
     </tbody>
   </table>
 
