--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BLASTスイング記録｜中学校野球部</title>
+
+<!-- ✅ PWA対応設定 -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#009e60">
+<link rel="apple-touch-icon" sizes="192x192" href="icon-192.png">
+<link rel="apple-touch-icon" sizes="512x512" href="icon-512.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="BLAST記録">
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('service-worker.js');
+  });
+}
+</script>
+  
 <style>
 body {
   font-family: "Noto Sans JP", sans-serif;
