--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BLASTスイング記録｜中学校野球部</title>
+<title>BLASTスイング記録｜新庄中野球部</title>
 
 <!-- ✅ PWA対応設定 -->
 <link rel="manifest" href="manifest.json">
@@ -20,7 +20,7 @@ if ('serviceWorker' in navigator) {
   });
 }
 </script>
-  
+
 <style>
 body {
   font-family: "Noto Sans JP", sans-serif;
@@ -75,7 +75,7 @@ button {
 }
 button:hover { background: #00784a; }
 #container {
-  max-width: 900px;
+  max-width: 950px;
   margin: auto;
   overflow-x: hidden;
 }
@@ -96,14 +96,15 @@ tr.year1 td:first-child { background: #f9fdfb; font-weight: bold; }
   margin: 20px auto;
   display: block;
   width: 90%;
-  max-width: 400px;
+  max-width: 420px;
   height: 200px;
 }
 </style>
 </head>
+
 <body>
 <div id="container">
-  <h1>BLASTスイング記録（中学校野球部）</h1>
+  <h1>BLASTスイング記録（新庄中野球部）</h1>
 
   <table id="blastTable">
     <thead>
@@ -111,32 +112,35 @@ tr.year1 td:first-child { background: #f9fdfb; font-weight: bold; }
         <th>学年・氏名</th>
         <th>Bat Speed<br>(km/h)</th>
         <th>Attack Angle<br>(°)</th>
+        <th>Time to Contact<br>(s)</th>
         <th>参考ヘッドスピード<br>(推定値 km/h)</th>
         <th>コメント</th>
       </tr>
     </thead>
     <tbody>
-      <!-- 2年生 -->
-      <tr class="year2"><td><input type="text" value="2年 石井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year2"><td><input type="text" value="2年 黒田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year2"><td><input type="text" value="2年 黒畑" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year2"><td><input type="text" value="2年 齋藤" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year2"><td><input type="text" value="2年 高倉" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year2"><td><input type="text" value="2年 西井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year2"><td><input type="text" value="2年 二宮" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year2"><td><input type="text" value="2年 堀井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year2"><td><input type="text" value="2年 山本" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+
+        <!-- 2年生 -->
+      <tr class="year2"><td><input type="text" value="2年 石井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 黒田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 黒畑" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 齋藤" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 高倉" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 西井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 二宮" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 堀井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year2"><td><input type="text" value="2年 山本" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+
       <!-- 1年生 -->
-      <tr class="year1"><td><input type="text" value="1年 荒井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 浦上" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 瓜生" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 管" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 新川" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 須原" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 芹田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 古田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 鈴木" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
-      <tr class="year1"><td><input type="text" value="1年 豊本" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 荒井" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 浦上" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 瓜生" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 管" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 新川" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 須原" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 芹田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 古田" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 鈴木" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
+      <tr class="year1"><td><input type="text" value="1年 豊本" readonly></td><td><input type="number" step="0.1" class="batSpeed"></td><td><input type="number" step="0.1" class="attackAngle"></td><td><input type="number" step="0.001" class="timeContact"></td><td class="refSpeed">-</td><td class="comment">-</td></tr>
     </tbody>
   </table>
 
@@ -156,7 +160,7 @@ tr.year1 td:first-child { background: #f9fdfb; font-weight: bold; }
 <script>
 const ctx = document.getElementById("chart").getContext("2d");
 
-document.querySelectorAll(".batSpeed, .attackAngle").forEach(input => {
+document.querySelectorAll(".batSpeed, .attackAngle, .timeContact").forEach(input => {
   input.addEventListener("input", e => {
     const row = e.target.closest("tr");
     updateRow(row);
@@ -167,6 +171,7 @@ document.querySelectorAll(".batSpeed, .attackAngle").forEach(input => {
 function updateRow(row) {
   const batSpeed = parseFloat(row.querySelector(".batSpeed").value);
   const attack = parseFloat(row.querySelector(".attackAngle").value);
+  const ttc = parseFloat(row.querySelector(".timeContact").value);
   const refCell = row.querySelector(".refSpeed");
   const commentCell = row.querySelector(".comment");
 
@@ -174,21 +179,37 @@ function updateRow(row) {
   else refCell.textContent = "-";
 
   if (!isNaN(batSpeed) && !isNaN(attack))
-    commentCell.textContent = evaluate(batSpeed, attack);
+    commentCell.textContent = evaluate(batSpeed, attack, ttc);
   else commentCell.textContent = "-";
 }
 
-function evaluate(batSpeed, attack) {
+function evaluate(batSpeed, attack, ttc) {
   let out = "";
-  if (batSpeed < 60) out += "出力不足（下半身の連動強化が必要）";
-  else if (batSpeed <= 70) out += "平均的（スイング順序とタイミングを整える段階）";
-  else if (batSpeed <= 80) out += "良好（出力が安定。角度制御と再現性を重視）";
-  else out += "高出力（角度とのバランスとコンタクト精度を磨く）";
+
+  // Bat Speed
+  if (batSpeed < 65) out += "出力不足（下半身と体幹の連動が弱く、打球初速が上がりにくい）";
+  else if (batSpeed < 75) out += "平均以下（スイング速度はあるが、力をボールに伝え切れていない）";
+  else if (batSpeed < 85) out += "平均的（動作の再現性とタイミング精度を高めたい）";
+  else out += "上位水準（出力は十分。角度とコンタクト精度を安定させたい）";
+
   out += " ／ ";
-  if (attack < 0) out += "ダウン傾向（下半身主導の不足または早開き）";
-  else if (attack <= 12) out += "理想的（ミート率・打球効率良好）";
-  else if (attack <= 18) out += "強打者型（長打志向。出力とのバランス要確認）";
-  else out += "アッパー傾向（リリース遅れまたは上体主導）";
+
+  // Attack Angle
+  if (attack < -3) out += "極端なダウン軌道（インパクトロスが大きい）";
+  else if (attack < 5) out += "ややダウン傾向（下方向への力が強く、ロスが出ている）";
+  else if (attack <= 12) out += "理想範囲（効率的な軌道。動作の再現性を維持したい）";
+  else if (attack <= 18) out += "ややアッパー（強打志向。下半身主導の維持が課題）";
+  else out += "過度なアッパー（上体主導。再現性が低下している）";
+
+  // Time to Contact
+  if (!isNaN(ttc)) {
+    out += " ／ ";
+    if (ttc > 0.18) out += "始動が遅く、出力伝達に時間を要している";
+    else if (ttc > 0.16) out += "平均的。動作順序の安定が課題";
+    else if (ttc > 0.14) out += "反応速度は良好。出力方向との一致を高めたい";
+    else out += "反応は速い。動作精度を維持できるかが鍵";
+  }
+
   return out;
 }
 
@@ -198,7 +219,7 @@ function updateAverages() {
   const y2 = Array.from(document.querySelectorAll(".year2 .batSpeed")).map(i=>parseFloat(i.value)).filter(v=>!isNaN(v));
   const y1 = Array.from(document.querySelectorAll(".year1 .batSpeed")).map(i=>parseFloat(i.value)).filter(v=>!isNaN(v));
   const avgAll = avg(all), avg2 = avg(y2), avg1 = avg(y1);
-  const avgRef = avgAll !== "--" ? (avgAll*1.2).toFixed(1) : "--";
+  const avgRef = avgAll !== "--" ? (avgAll*1.6).toFixed(1) : "--";
 
   colorize("avgAll", avgAll);
   colorize("avg2", avg2);
@@ -245,15 +266,16 @@ function drawChart(all, y2, y1) {
 }
 
 function downloadCSV() {
-  let csv = "学年・氏名,BatSpeed(km/h),AttackAngle(°),参考ヘッドスピード(km/h),コメント\n";
+  let csv = "学年・氏名,BatSpeed(km/h),AttackAngle(°),TimeToContact(s),参考ヘッドスピード(km/h),コメント\n";
   document.querySelectorAll("#blastTable tbody tr").forEach(row=>{
     const cols = row.querySelectorAll("td");
     const name = cols[0].querySelector("input").value;
     const bs = cols[1].querySelector("input").value;
     const aa = cols[2].querySelector("input").value;
-    const ref = cols[3].textContent;
-    const com = cols[4].textContent.replace(/,/g,"、");
-    csv += `${name},${bs},${aa},${ref},"${com}"\n`;
+    const ttc = cols[3].querySelector("input").value;
+    const ref = cols[4].textContent;
+    const com = cols[5].textContent.replace(/,/g,"、");
+    csv += `${name},${bs},${aa},${ttc},${ref},"${com}"\n`;
   });
   const blob = new Blob([csv], {type:"text/csv;charset=utf-8;"});
   const link = document.createElement("a");
